<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".NoticesActivity">

    <TextView
        android:id="@+id/textViewNoticesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notices_title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/notice1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sample_notice_1"
        android:textSize="16sp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewNoticesTitle"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/notice2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sample_notice_2"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/notice1"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/notice3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sample_notice_3"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/notice2"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>